syntax = "proto3";

package customers;

import "types.proto";

option go_package = ".;plantmanager";

service V1Customers {
    rpc GetCustomer(GetCustomerRequest) returns (GetCustomerReply) {}
    rpc FindCustomers(FindCustomersRequest) returns (FindCustomersReply) {}
    rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerReply) {}
    rpc DestroyCustomer(DestroyCustomerRequest) returns (types.EmptyReply) {}
}

message GetCustomerRequest {
    int64 id = 1;
    string JWT = 2;
}

message GetCustomerReply {
    types.Customer customer = 1;
}

message FindCustomersRequest {
    int64 limit = 1;
    int64 offset = 2;
    string JWT = 3;
}

message FindCustomersReply {
    repeated types.Customer customers = 1;
}

message CreateCustomerRequest {
    string name = 1;
    string JWT = 2;
}

message CreateCustomerReply {
    types.Customer customer = 1;
}

message DestroyCustomerRequest {
    int64 id = 1;
    string JWT = 2;
}
